# Udo

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  history.md
core/include/ast/: ASTContext.hpp  RecursiveAstVisitor.hpp  ast.hpp
core/include/cli/: compiler_invocation.hpp
core/include/error/: diagid.hpp
core/include/lexer/: lexer.hpp
core/include/parser/: GrammarStream.hpp  parser.hpp  recovery.hpp
core/include/parser/docs/: GrammarStream.md
core/include/preprocessor/: preprocessor.hpp
core/include/support/: global_constants.hpp  source_manager.hpp
core/src/ast/: ASTContext.cpp  ast.cpp
core/src/cli/: compiler_invocation.cpp  main.cpp
core/src/codegen/: codegenerator.cpp
core/src/error/: error.cpp
core/src/lexer/: lexer.cpp
core/src/parser/: GrammarStream.cpp  parser.cpp
core/src/preprocessor/: preprocessor.cpp
core/src/support/: source_manager.cpp
docs/: DiagnosticsEngine.md  value_passing_semantics.md
spec/: bundle.md  expressions.md  overloading.md  type.md  variable_decl.md
src/core/ast/: ast.cpp  ast.hpp
src/core/cli/: compiler_config.hpp  compiler_invocation.cpp  compiler_invocation.hpp  main.cpp
src/core/codegen/: codegenerator.hpp  instruction_selector.hpp
src/core/error/: DiagnosticSeverity.hpp  diagid.hpp  error.cpp  error.hpp
src/core/lexer/: lexer.cpp  lexer.hpp
src/core/parser/: parser.cpp  parser.hpp
src/core/preprocessor/: preprocessor.cpp
src/core/support/: global_constants.hpp  source_manager.cpp  source_manager.hpp
syntax/: casting.udo  functions.udo  io.udo  syntax.bnf  variable.udo
test/: CMakeLists.txt  basic.udo  functions.udo  lifetimes_proposal.udo  main.cpp  renew.udo  variables.udo
test/ast/: ast_test.cpp  ast_test.hpp
test/error/: error_test.cpp  error_test.hpp
test/lexer/: lexer_test.cpp  lexer_test.hpp
test/parser/: parser_test.cpp  parser_test.hpp
test/preprocessor/: preprocessor_test.cpp  preprocessor_test.hpp
test/suite/: udo_test.hpp  udo_test_docs.md
